--- a/about.html
+++ b/about.html
@@ -107,13 +107,37 @@
 
   <!---FOOTER--->
   <section class="footer">
-    <h4 >About Us</h4>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br>Pellentesque aliquet turpis nulla, eleifend faucibus est sollicitudin ut.</p>
-    <div class="icons">
-      <i class="fa fa-facebook"></i>
-      <i class="fa fa-instagram"></i>
-      <i class="fa fa-linkedin"></i>
-      <i class="fa fa-twitter"></i>
+    <div class="container">
+        <div class="row">
+
+          <div class="footer-col-1">
+            <h3>Download Our App</h3>
+              <p>Download App for Android and ios mobile phone.</p>
+                <div class="app-logo">
+                  <img src="images/play-store.png">
+                  <img src="images/app-store.png">
+                </div>
+          </div>
+
+          <div class="footer-col-2">
+            <img src="images/logopic.png">
+            <p>Govs is meant for research and development in the field of Engineering, Science & Technology.<br> Empowering Good Governance Globally.</p>
+          </div>
+            
+          <div class="footer-col-3">
+            <h3>Follow Us</h3>   
+              <div class="icons">
+                <i class="fa fa-facebook"></i>
+                <i class="fa fa-instagram"></i>
+                <i class="fa fa-linkedin"></i>
+                <i class="fa fa-twitter"></i>
+                <i class="fa fa-youtube"></i>
+                <i class="fa fa-telegram"></i>
+              </div>
+          </div>
+        </div>
+        <hr>
+        <p class="copyright">Copyright @ 2021 - GovsHost India</p>
     </div>
   </section>
 </body>
